--- a/static/lab1.css
+++ b/static/lab1.css
@@ -1,5 +1,29 @@
 body {
-    background-color: pink; 
+    background-color: pink;
+    margin-left: 20px;
+    margin-right: 20px; 
+
+}
+
+header {
+    background-color: hotpink;
+    color: aliceblue; 
+    padding: 5px;
+    font-size: 16pt;
+
+}
+
+footer {
+    background-color: hotpink;
+    color: aliceblue; 
+    padding: 5px;
+    font-size: 11pt;
+    font-style: italic;
+    text-align: right;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    position: fixed;
 }
 
 h1 {
@@ -11,4 +35,9 @@ h1 {
 img {
     width: 80%;
     margin: 20px;
+}
+
+div, li {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
 }
