--- a/templates/example.html
+++ b/templates/example.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Софья Андронова. Лабораторная работа 2</title>
+    <title>Андронова Софья Александровна. Лабораторная работа {{number_lab}}</title>
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа 2
+        WEB-программирование, часть 2. Лабораторная работа {{number_lab}}
     </header>
 
     <main>
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-        &copy; {{name}}, ФБИ-12, 3 курс, 2023
+        &copy; {{name}}, {{group}}, {{number_course}} курс, 2023
     </footer>
 </body>
 </html>
