--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,5 +9,10 @@
         <li>
             <a href="/lab2/example">example</a>
         </li>
+        <li>
+            <a href="/lab2/cat_breeds">Породы кошек</a>
+        </li>
     </ol>
 {% endblock %}
+
+   
