--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -15,4 +15,7 @@
     </ol>
 {% endblock %}
 
-   
+{% block menu %}
+    <a href="http://127.0.0.1:5000/menu" target="_blank">Меню</a>
+{% endblock %}
+
