--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -6,6 +6,7 @@
     <h1>Формы (POST)</h1>
     <div>Тема лабораторной работы - Формы (POST). Список сделанных страниц:</div>
     <ol>
-        <li><a href="">***</a></li>
+        <li><a href="/lab4/login">***</a></li>
     </ol>
+    
 {% endblock %}
