--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -7,6 +7,8 @@
 <div>Тема лабораторной работы - Формы (POST). Список сделанных страниц:</div>
 <ol>
         <li><a href="/lab4/login">***</a></li>
+        <li><a href="/lab4/xolod">Холодильник</a></li>
+        <li><a href="/lab4/zerno">Заказ зерна</a></li>
 </ol>
 
 {% endblock %}
