--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -9,6 +9,7 @@
         <li><a href="/lab4/login">***</a></li>
         <li><a href="/lab4/xolod">Холодильник</a></li>
         <li><a href="/lab4/zerno">Заказ зерна</a></li>
+        <li><a href="/lab4/cookies">Куки</a></li>
 </ol>
 
 {% endblock %}
