--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Софья Андронова. {% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+
+
+    {% if request.cookies.get('color') %}
+    <style>
+        body {
+            color: {{ request.cookies.get('color') }};
+        }
+    </style>
+    {% endif %}
+
 </head>
 <body>
     <header>
@@ -19,5 +29,6 @@
     <footer>
         &copy; Софья Андронова, ФБИ-12, 3 курс, 2023
     </footer>
+    
 </body>
 </html>
