--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -12,6 +12,21 @@
     <div>
         <button type="submit">ОК</button>
     </div>
+    <div>
+        <label for="background">Выберете цвет фона:</label>
+        <input type="color" id="background" name="background">
+    </div>
+    <div>
+        <button type="submit">ОК</button>
+    </div>
+
+    <div>
+        <label for="text">Выберете размер текста: </label>
+        <input type="text" id="text" name="text">
+    </div>
+    <div>
+        <button type="submit">ОК</button>
+    </div>
 </form>
 
 {% endblock %}
