--- a/templates/lab5.html
+++ b/templates/lab5.html
@@ -9,7 +9,12 @@
         <a href="#">Просмотреть заметки</a>
         <a href="#" style="margin-left: -40px;">Создать заметку</a>
         <a href="#" class="log">Логин</a>
-        <a href="#" class="reg">Регистрация</a>
+        <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
         <p>Апоп</p>
     </div>
 {% endblock %}
+
+{% block menu %}
+    <a href="http://127.0.0.1:5000/menu" target="_blank">Меню</a>
+{% endblock %}
+
