--- a/static/lab5.css
+++ b/static/lab5.css
@@ -42,6 +42,7 @@ div a {
   text-decoration: none;
   color: #000000;
   height: 25px;
+
 }
 
 div a:hover {
@@ -62,3 +63,24 @@ div a:hover {
   background-color: hotpink;
   margin-right: -20px;
 }
+
+.error {
+    border: 2px solid red;
+    border-radius: 5px;
+    background: rgba(255, 0, 0, 0.473);
+    width: 250px;
+    padding: 5px;
+    margin: 0 auto;
+  }
+  
+  .pole {
+    display: block;
+    width: 250px; 
+    background: white; 
+    border-radius: 5px;
+    padding: 5px;
+    height: 45px;
+    margin: 0 auto;
+    margin-top: 5px;
+  }
+  
