--- a/templates/lab5.html
+++ b/templates/lab5.html
@@ -8,9 +8,9 @@
         <h1>База знаний</h1>
         <a href="#">Просмотреть заметки</a>
         <a href="#" style="margin-left: -40px;">Создать заметку</a>
-        <a href="#" class="log">Логин</a>
+        <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
         <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
-        <p>Апоп</p>
+        <p>{{username}}</p>
     </div>
 {% endblock %}
 
