--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,26 @@
 {% extends "base.html" %}
-
-{% block lab %} Лабораторная работа 4 {% endblock %}
-
+{% block lab %}Лабораторная работа 4{% endblock %}
 {% block main %}
-
-<h1>Вход</h1>
-<h2>Пожалуйста, авторизируйтесь</h2>
-
-<div> {{ errors.cred or '' }}</div>
-<form method="post">
-    <div>
-        <label for="username">Пользователь:</label>
-        <input  class="login_forma" type="text" id="username" name="username", value="{{username or ''}}">
-        <span class="errors">{{ errors.username }}</span>
-    </div>
-    <div>
-        <label for="password">Пароль:</label>
-        <input  class="login_forma" type="password" id="password" name="password", value="{{ password or '' }}">
-        <span class="errors">{{ errors.password }}</span>
-    </div>
-    <div>
-        <button class="login_forma" type="submit">Войти</button>
-        <button class="login_forma" type="reset">Отмена</button>
-    </div>
-</form>
+    <h1>Вход</h1>
+    <h2>Пожалуйста, авторизуйтесь</h2>
+    <div style="font-weight: bold; color: red; ">{{error}}</div>
+    <form method="post">
+        <div style="padding-bottom: 5px;">
+            <label for="username">Пользователь:</label>
+            <input type="text" id="username" name="username" value="{{ username }}">
+        </div>
+        <div style="padding-bottom: 5px;">
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" value="{{ password }}">
+        </div>
+        <div>
+            <button type="submit">Войти</button>
+            <button type="reset">Отмена</button>
+        </div>
+        <br>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы 4</a>
+        <a href="http://127.0.0.1:5000/lab5" target="_blank">Меню лабы 5</a>
+    </form>
 {% endblock %}
+
 
