--- a/templates/articleN.html
+++ b/templates/articleN.html
@@ -1,20 +1,23 @@
 {% extends "base5.html" %}
 
-{% block lab %}Лабораторная работа 5{% endblock %}
+{% block lab %} Лабораторная работа 5 {% endblock %}
 
 {% block main %}
-
-<div style="margin-top: 10px;display:flex;justify-content: space-between;">
+    <div style="margin-top: 10px;display:flex;justify-content: space-between;">
         <h1>База знаний</h1>
         <a href="#">Просмотреть заметки</a>
         <a href="http://127.0.0.1:5000/lab5/new_article" style="margin-left: -40px;">Создать заметку</a>
         <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
         <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
-        <p>{{username}}</p>
+        <p>{{visibleUser}}</p>
     </div>
-{% endblock %}
+    <hr size="1">
 
-{% block menu %}
-    <a href="http://127.0.0.1:5000/menu" target="_blank">Меню</a>
-{% endblock %}
+    <div>
+        <h1>{{ article_title }}</h1>
+        {% for paragraph in article_text %}
+            <p>{{ paragraph }}</p>
+        {% endfor %}
+    </div>
 
+{% endblock %}
