--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
-{% block lab %}Лабораторная работа 4{% endblock %}
+
+{% block lab %}Лабораторная работа {{numLab}}{% endblock %}
+
 {% block main %}
     <h1>Вход</h1>
     <h2>Пожалуйста, авторизуйтесь</h2>
-    <div style="font-weight: bold; color: red; ">{{error}}</div>
+    <div style="font-weight: bold; color: red; ">{{error}}
+        {% for error in errors %}
+            {{ error }}
+        {% endfor %}
+    </div>
     <form method="post">
         <div style="padding-bottom: 5px;">
             <label for="username">Пользователь:</label>
@@ -18,8 +24,9 @@
             <button type="reset">Отмена</button>
         </div>
         <br>
-        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы 4</a>
-        <a href="http://127.0.0.1:5000/lab5" target="_blank">Меню лабы 5</a>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы 4</a><br>
+        <a href="http://127.0.0.1:5000/lab5" target="_blank">Меню лабы 5</a><br>
+        <a href="http://127.0.0.1:5000/lab6" target="_blank">Меню лабы 6</a>
     </form>
 {% endblock %}
 
