--- a/templates/view_article.html
+++ b/templates/view_article.html
@@ -1,31 +1,58 @@
 {% extends "base5.html" %}
 
-{% block lab %} Лабораторная работа 5 {% endblock %}
+{% block lab %} Лабораторная работа {{numLab}}{% endblock %}
 
 {% block main %}
-    <div style="margin-top: 10px;display:flex;justify-content: space-between;">
+    {% if username %}
+        <div style="margin-top: 10px;display:flex;justify-content: space-between;">
+            <h1>База знаний</h1>
+            <a href="http://127.0.0.1:5000/lab5/view_article">Просмотреть заметки</a>
+            <a href="http://127.0.0.1:5000/lab5/new_article" style="margin-left: -40px;">Создать заметку</a>
+            <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
+            <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
+            <p>{{username}}</p>
+        </div>
+    {% else %}
+        <div style="margin-top: 10px;display:flex;justify-content: space-between;">
         <h1>База знаний</h1>
-        <a href="http://127.0.0.1:5000/lab5/view_article">Просмотреть заметки</a>
-        <a href="http://127.0.0.1:5000/lab5/new_article" style="margin-left: -40px;">Создать заметку</a>
-        <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
-        <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
-        <p>{{username}}</p>
+        <a href="http://127.0.0.1:5000/lab6/articles">Просмотреть заметки</a>
+        <a href="http://127.0.0.1:5000/lab6/new_article" style="margin-left: -40px;">Создать заметку</a>
+        <a href="http://127.0.0.1:5000/lab6/login" class="log">Логин</a>
+        <a href="http://127.0.0.1:5000/lab6/register" class="reg">Регистрация</a>
+        <p>{{ current_user.username }}</p>
     </div>
     <hr size="1">
 
 
     <div>
-        <h1>Заметки {{username}}</h1>
+        <h1>{% if username %}Заметки {{username}}
+            {% else %}Заметки {{ current_user.username }}
+            {% endif %}
+        </h1>
+        {% if username %}
+            <ol>
+                {% for article in articles %}
+                    <li style="margin-bottom: 20px; 
+                                border: 2px solid; 
+                                border-radius: 5px;">
+                        <a href="/lab5/articles/{{ article.id }}">{{ article.title }}</a>
+                    </li>
+                {% endfor %}
+            </ol>
+        {% else %}
         <ol>
             {% for article in articles %}
-                <li style="margin-bottom: 20px; 
-                            border: 2px solid; 
-                            border-radius: 5px;">
-                    <a href="/lab5/articles/{{ article.id }}">{{ article.title }}</a>
-                </li>
-            {% endfor %}
+                    <li style="margin-bottom: 20px; 
+                                border: 2px solid; 
+                                border-radius: 5px;">
+                        <a href="/lab6/articles/{{ article.id }}">{{ article.title }}</a>
+                    </li>
+                {% endfor %}
         </ol>
+        {% endif %}
     </div>
 
 {% endblock %}
+
+
 
