--- a/templates/base5.html
+++ b/templates/base5.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Андронова Софья Александровна.{% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='lab5.css') }}">
+    {% block script %}{% endblock %}
 </head>
 <body>
     <header>
