--- a/templates/lab8/index.html
+++ b/templates/lab8/index.html
@@ -3,8 +3,37 @@
 {% block lab %}Лабораторная работа 8{% endblock %}
 
 {% block script %}
+<script src="{{ url_for('static', filename='lab8/main.js') }}"></script>
 {% endblock %}
 
 {% block main %}
+<h1>Список курсов</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Количество видеороликов</th>
+            <th>Цена</th>
+            <th>Действие</th>
+        </tr>
+    </thead>
+    <tbody id="course-list"></tbody>
+</table>
+
+<script>
+    fillCourselist();
+</script>
+
+<div>
+    <button onclick="addCourse()">Добавить курс</button>
+</div>
+
+<!-- <div class="modal">
+    <input type="hidden" id="num">
+    <label>
+        name:
+        <input type="text" id="name">
+    </label><br> -->
 {% endblock %}
 
