--- a/templates/lab8/index.html
+++ b/templates/lab8/index.html
@@ -4,6 +4,18 @@
 
 {% block script %}
 <script src="{{ url_for('static', filename='lab8/main.js') }}"></script>
+<style>
+    .modal {
+    display: none;
+    left: 27vw;
+    position: absolute;
+    border: 3px hotpink solid;
+    width: 400px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    z-index: 100;
+}
+</style>
 {% endblock %}
 
 {% block main %}
@@ -29,11 +41,25 @@
     <button onclick="addCourse()">Добавить курс</button>
 </div>
 
-<!-- <div class="modal">
+<div class="modal">
     <input type="hidden" id="num">
     <label>
-        name:
+        Название курса:
         <input type="text" id="name">
-    </label><br> -->
+    </label><br>
+
+    <label>
+        Количество видеороликов:
+        <input type="number" id="videos" min="0">
+    </label><br>
+
+    <label>
+        Цена:
+        <input type="number" id="price" min="0">
+    </label><br>
+
+    <button onclick="sendCourse()">OK</button>
+    <button onclick="cancel()">Отмена</button>
+</div>
 {% endblock %}
 
