--- a/templates/lab9/error404.html
+++ b/templates/lab9/error404.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends "base.html" %}
+
+{% block lab %} Лабораторная работа 9 {% endblock %}
+
+{% block script %} {% endblock %}
+
+{% block main %}
     <title>Error 404</title>
-</head>
-<body>
+
     <h1>Ошибка 404</h1>
-    <p>Страница не найдена. Пожалуйста вернитесь на <a href="/">главную страницу</a></p>
-</body>
-</html>
+    <p>Страница не найдена. Пожалуйста, вернитесь на 
+        <a href="/">главную страницу</a>.</p>
+{% endblock %}
+
 
