--- a/templates/lab9/index.html
+++ b/templates/lab9/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block lab %}Лабораторная работа 9{% endblock %}
+{% block lab %} Лабораторная работа 9 {% endblock %}
 
-{% block main %}{% endblock %}
+{% block script %} {% endblock %}
 
 {% block main %}
-    <h1>Поздравления</h1>
+<h1>Поздравления</h1>
 {% endblock %}
 
